--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "scikit-learn>=1.7.2",
     "scipy>=1.16.2",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
     "streamlit>=1.50.0",
     "ucimlrepo>=0.0.7",
 ]
