--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipykernel>=7.1.0",
+    "lightgbm>=4.6.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
@@ -15,4 +16,5 @@ dependencies = [
     "statsmodels>=0.14.5",
     "streamlit>=1.50.0",
     "ucimlrepo>=0.0.7",
+    "xgboost>=3.1.1",
 ]
