--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "lightgbm>=4.6.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
+    "optuna>=4.5.0",
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.2",
