--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "dotenv>=0.9.9",
     "dspy>=3.0.3",
     "ipykernel>=7.1.0",
     "lightgbm>=4.6.0",
@@ -12,6 +13,7 @@ dependencies = [
     "numpy>=2.3.4",
     "optuna>=4.5.0",
     "pandas>=2.3.3",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
     "scipy>=1.16.2",
     "seaborn>=0.13.2",
