--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "statsmodels>=0.14.5",
     "streamlit>=1.50.0",
+    "typing>=3.10.0.0",
     "ucimlrepo>=0.0.7",
     "xgboost>=3.1.1",
 ]
